# UnumLLM

./: .gitignore  NOTES.md  README.md  config.py  corpus.py  dataset_installer.py  do-dont.md  engine_client.py  generate.py  gui.py  requirements.txt  tests.txt  train.py  train_redpajama.sh
Engine/: ARCHITECTURE.md  Cargo.toml  LICENSE  MANIFEST.in  PACKAGE_GUIDE.md  PYTHON_DISTRIBUTION.md  README.md  pyproject.toml  setup.py
Engine/crates/onebitllm-cli/: Cargo.toml  README.md
Engine/crates/onebitllm-cli/src/: main.rs
Engine/crates/onebitllm-cli/src/commands/: benchmark.rs  bigram.rs  generate.rs  mod.rs  quantize.rs  train.rs
Engine/crates/onebitllm-core/: Cargo.toml  README.md  build.rs
Engine/crates/onebitllm-core/benches/: bitpack_bench.rs  inference_bench.rs
Engine/crates/onebitllm-core/src/: error.rs  lib.rs
Engine/crates/onebitllm-core/src/autograd/: backward.rs  mod.rs  ops.rs  tape.rs  variable.rs
Engine/crates/onebitllm-core/src/backend/: cpu.rs  hip_runtime.rs  mod.rs  rocm.rs  traits.rs
Engine/crates/onebitllm-core/src/backend/hip/: packed_dense_left_transposed.hip
Engine/crates/onebitllm-core/src/infer/: generator.rs  kv_cache.rs  mod.rs  sampler.rs
Engine/crates/onebitllm-core/src/io/: config.rs  custom.rs  gguf_.rs  mod.rs  onnx_.rs  safetensors_.rs
Engine/crates/onebitllm-core/src/nn/: activation.rs  attention.rs  embedding.rs  linear.rs  mlp.rs  mod.rs  module.rs  norm.rs  positional.rs
Engine/crates/onebitllm-core/src/optim/: adamw.rs  mod.rs  scheduler.rs  sgd.rs  traits.rs
Engine/crates/onebitllm-core/src/quant/: binary.rs  bitpack.rs  mod.rs  scales.rs  ste.rs  ternary.rs
Engine/crates/onebitllm-core/src/tensor/: broadcast.rs  mod.rs  ops.rs  packed_tensor.rs  shape.rs  simd.rs
Engine/crates/onebitllm-core/src/tokenizer/: bpe.rs  huggingface.rs  mod.rs  traits.rs
Engine/crates/onebitllm-core/src/train/: checkpoint.rs  loop_.rs  mod.rs  post_quant.rs  qat.rs
Engine/crates/onebitllm-core/tests/: integration_tests.rs
Engine/crates/onebitllm-python/: Cargo.toml  README.md
Engine/crates/onebitllm-python/src/: config.rs  generate.rs  lib.rs  model.rs  tokenizer.rs
Engine/docs/: API_REFERENCE.md  ARCHITECTURE.md  DEVELOPMENT.md  GETTING_STARTED.md  index.md
Engine/python/onebitllm/: __init__.py  examples.py
Engine/scripts/: build_wheel.sh  install_dev.sh  test_install.py
scripts/: install_dataset.py  install_fineweb2.sh  install_oasst1.sh  install_redpajama.sh  install_the_pile.sh  install_ultrachat.sh
