[workspace]
resolver = "2"
members = [
    "crates/onebitllm-core",
    "crates/onebitllm-cli",
    "crates/onebitllm-python",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
ndarray = "0.16"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
bytemuck = { version = "1.0", features = ["derive"] }
num-traits = "0.2"
log = "0.4"
rayon = "1.10"
safetensors = "0.5"
serde_yaml = "0.9"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
env_logger = "0.11"
indicatif = "0.17"
criterion = { version = "0.5", features = ["html_reports"] }
