[package]
name = "onebitllm-core"
version.workspace = true
edition.workspace = true
license-file = "../../LICENSE"
description = "Core library for 1-bit quantized LLM training and inference"

[dependencies]
ndarray = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
rand = { workspace = true }
bytemuck = { workspace = true }
num-traits = { workspace = true }
log = { workspace = true }
rayon = { workspace = true, optional = true }
tokenizers = { version = "0.21", optional = true }
safetensors = { workspace = true, optional = true }
serde_yaml = { workspace = true, optional = true }

[dev-dependencies]
approx = "0.5"
criterion = { workspace = true }

[[bench]]
name = "bitpack_bench"
harness = false

[[bench]]
name = "inference_bench"
harness = false

[features]
default = ["std"]
std = []
serde = ["dep:serde", "dep:serde_json"]
rayon = ["dep:rayon"]
simd = []
rocm = []
tokenizers-hf = ["dep:tokenizers"]
safetensors-io = ["dep:safetensors", "serde"]
yaml-config = ["dep:serde_yaml", "serde"]
