[package]
name = "onebitllm-python"
version.workspace = true
edition.workspace = true
license-file = "../../LICENSE"
description = "Python bindings for 1-bit quantized LLM engine"

[lib]
name = "onebitllm"
crate-type = ["cdylib"]

[dependencies]
onebitllm-core = { path = "../onebitllm-core" }
pyo3 = { version = "0.28", features = ["extension-module"] }
